--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "license": "MIT",
   "keywords": [
-    "joplin-plugin"
+    "joplin-plugin",
+    "datetime",
+    "slash",
+    "commands",
+    "autocomplete"
   ],
   "devDependencies": {
     "@types/node": "^14.0.14",
