--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,10 +3,10 @@
 	"id": "com.hieuthi.joplin.slash-commands",
 	"app_min_version": "2.2",
 	"version": "1.0.0",
-	"name": "Slash Commands",
-	"description": "Execute several useful commands such as insert current datetime by typing a string start with a slash `/`.",
+	"name": "Slash Commands: Datetime & More",
+	"description": "Execute several utilities such as insert current datetime by typing a command that starts with slash.",
 	"author": "Hieu-Thi Luong",
 	"homepage_url": "https://github.com/hieuthi/joplin-plugin-slash-commands",
 	"repository_url": "https://github.com/hieuthi/joplin-plugin-slash-commands",
-	"keywords": []
+	"keywords": ["joplin-plugin","datetime","slash","commands","autocomplete"]
 }
