--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,11 +2,11 @@
 	"manifest_version": 1,
 	"id": "com.hieuthi.joplin.slash-commands",
 	"app_min_version": "2.2",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"name": "Slash Commands: Datetime & More",
-	"description": "Execute several utilities such as insert current datetime by typing a command that starts with slash.",
+	"description": "Execute several utilities by typing a command that starts with a slash.",
 	"author": "Hieu-Thi Luong",
 	"homepage_url": "https://github.com/hieuthi/joplin-plugin-slash-commands",
 	"repository_url": "https://github.com/hieuthi/joplin-plugin-slash-commands",
-	"keywords": ["joplin-plugin","datetime","slash","commands","autocomplete"]
+	"keywords": ["joplin-plugin","datetime","slash","commands","shortcut"]
 }
